--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/hilderonny/ronnycraft#readme",
   "dependencies": {
     "body-parser": "^1.16.1",
+    "browserify": "^14.1.0",
     "express": "^4.14.1",
-    "mongodb": "^2.2.24"
+    "mongodb": "^2.2.24",
+    "voxel-hello-world": "^0.6.0"
   }
 }
