--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "express": "^4.14.1",
     "mongodb": "^2.2.24",
     "voxel-engine": "^0.20.2",
-    "voxel-player": "^0.1.0"
+    "voxel-highlight": "0.0.10",
+    "voxel-mine": "^1.0.0",
+    "voxel-player": "^0.1.0",
+    "voxel-plugins": "^0.5.0",
+    "voxel-reach": "^0.2.2"
   }
 }
