--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/hilderonny/ronnycraft#readme",
   "dependencies": {
+    "babylonjs": "^2.5.0",
     "body-parser": "^1.16.1",
     "browserify": "^14.1.0",
     "express": "^4.14.1",
