Added websockets for multiplayer

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "body-parser": "^1.16.1",
     "browserify": "^14.1.0",
     "express": "^4.14.1",
+    "http": "0.0.0",
     "mongodb": "^2.2.24",
+    "socket.io": "^1.7.3",
     "voxel-engine": "^0.20.2",
     "voxel-mine": "^1.0.0",
     "voxel-player": "^0.1.0",
